@@ -3,6 +3,9 @@ Change log 1.4 (under development)
 * Added support for JUnit 4.8.1 (issue 226)
 * Fixed so that a "mock name" is set in the Mockito extension API. Fixes NullPointerException when e.g. toString is invoked on a mock. (issue 239)
 * Changed method signature on "mockStatic" to return void in the Mockito extension API.
+* Fixed the "Internal error: Run delegates were 0" bug when using a test class hierarchy and the PowerMock JUnit runner when no tests are defined in a parent test class (issue 241).
+* Added support for deep cloning objects containing self references using the DeepCloner.
+* New experimental approach for bootstrapping PowerMock is supported using a JUnit rule called PowerMockRule (available in JUnit 4.7+). This allows you to use other JUnit runners than the PowerMock one (PowerMockRunner) while still benefiting from PowerMock's functionality.
 
 Change log 1.3.6 (2010-03-10)
 -----------------------------
